# MarketSim

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.api  README.md  docker-compose.yaml  docker-compose.yml  main.cpp  market.cpp  market.hpp  order.hpp  params.json  pyproject.toml  requirements.txt  visualize.py
.github/workflows/: deploy.yml
api/: main.py
api/bff_api/: Dockerfile  main.py
api/sim/: Dockerfile
api/sim_api/: Dockerfile  main.py
backend/: .dockerignore  Dockerfile  main.py  requirements.txt
backend/sim/: market.py  models.py  orderbook.py  trader.py
frontend/: Dockerfile  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/public/: t.ipynb
infra/: Caddyfile  docker-compose.yml
marketsim/core/: market.py  models.py  orderbook.py
marketsim/dynamics/: main.jl  models.jl  test.jl
marketsim/simulate/: execute.py  models.py
marketsim/traders/: MeanReversion.py  Momentum.py  RL.py  __init__.py
marketsim/utils/: createState.py  defaultStates.json  simpleInit.py
scripts/: liveplot.py  visualize.py
sim/: market.py  models.py  orderbook.py
sim/traders/: Momentum.py  RL.py  __init__.py  base.py
src/: init_state.cpp  init_traders.cpp  main.cpp  market.cpp
src/betsize/: base.hpp  fractional.hpp  kelly.hpp
src/headers/: market.hpp  order.hpp  utils.hpp
src/makers/: MarketMaker.hpp
traders/: MarketMaker.hpp  MeanReverter.hpp  MomentumTrader.hpp  Monkey.hpp  class.hpp
utils/: token.py
(+21 files in other folders)
