[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketsim"
version = "0.1.0"
description = "Lightweight market simulator with heterogeneous traders"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Parker Carrus" }]
license = { text = "MIT" }

dependencies = [
  "pydantic>=2.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "orjson>=3.10",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
]

bff = [
  fastapi>=0.112
  uvicorn[standard]>=0.30
  pydantic>=2.6
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marketsim*", "api*"]  # include your API package too
